# system_information

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  resources.qrc
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp  static.qrc
src/app/Managers/: app_manager.cpp  app_manager.h  info_manager.cpp  info_manager.h  tool_manager.cpp  tool_manager.h
src/app/Pages/Dashboard/: circlebar.cpp  circlebar.h  circlebar.ui  dashboard_page.cpp  dashboard_page.h  dashboard_page.ui  linebar.cpp  linebar.h  linebar.ui
src/app/static/: languages.json  themes.json
src/app/translations/: stacer_en.ts
src/core/: CMakeLists.txt  core_global.h
src/core/Info/: cpu.cpp  cpu_info.cpp  cpu_info.h  disk_info.cpp  disk_info.h  memory_info.cpp  memory_info.h  network_info.cpp  network_info.h  process.cpp  process.h  process_info.cpp  process_info.h  system_info.cpp  system_info.h
src/core/Tools/: i_package_manager.h  package_tool.cpp  package_tool.h  service_tool.cpp  service_tool.h
src/core/Tools/packageStrategies/: aptManager.cpp  aptManager.h  aurManager.cpp  aurManager.h  pacmanManager.cpp  pacmanManager.h
src/core/Utils/: command_ulit.cpp  command_ulit.h  file_util.cpp  file_util.h  format_util.cpp  format_util.h  i_command_executor.h  i_file_reader.h  qt_file_reader.h
tests/: CMakeLists.txt
tests/core/: test_format_util.cpp
